# sfml-2d-shapes

./: .gitignore  CMakeLists.txt  README.md  README.txt
assets/config/: config.txt
src/: OldGame.cpp  game.cpp  main.cpp
